overflow fixed

--- a/style.css
+++ b/style.css
@@ -25,18 +25,27 @@ li{
     width: 240px;
 }
 #list{
-    width: 280px;
+    width: 100%;
+    height: 600px;
     padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: auto;
 }
 .item{
-    width: 100%;
-    height: 40px;
-    margin: 6px 0px 6px;
+    width: 80%;
+    margin: 6px 3px 6px;
+    position:initial;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 3px solid black;
+    box-sizing: border-box;
 }
 .item-text{
+    height: 100%;
     font-size: 1.5em;
+    margin: 5px;
 }
